tests/test0155.exp
Parse error, unexpected ^ ( tests/test0155.ctr: 3 )
Expected message.
