tests/test0155.ctr
#NOAST
#Test parser error, expected message after chain
Pen write: 'Hello world', ^.
